exclude dist from ts check and git

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
   "include": [
     "./src/typed-router.d.ts"
   ],
-  "exclude": ["dist", "node_modules", "cypress"],
+  "exclude": ["dist", "node_modules", "cypress", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }],
 }
