--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diamondhand-widget",
-  "version": "0.0.15",
+  "version": "0.0.17",
   "main": "dist/diamondhand-widget.mjs",
   "types": "diamondhand-widget.d.ts",
   "scripts": {
@@ -30,6 +30,7 @@
     "fflate": "^0.8.2",
     "libsodium-wrappers-sumo": "^0.7.13",
     "roboto-fontface": "*",
+    "viem": "^2.10.9",
     "vue": "^3.4.21",
     "vue-i18n": "^9.10.2",
     "vuetify": "^3.5.8"
